# NaturalGradientTraining

./: .gitignore  README.md  setup.cfg
examples/: 1DP_NEG_comparison.py  1d_poisson_baseline.py  burger.py  evo_heat.py  laplace_sherman.ipynb  nonlinear_deep_ritz.py  poisson_pinn_1d.py  poisson_pinn_2d.py  poisson_pinn_2d_cgd.ipynb  poisson_pinn_2d_cgd_matrixfree.ipynb  poisson_pinn_3d.py  source_recovery.py  testing.ipynb  utility.py  waveeq.py
examples/experimental/: burger.py  burger_fake.ipynb  energy_natural_gradient_boosting.ipynb  engb_updates.ipynb  natural_gradient_test.ipynb  poisson_pinn_2d.ipynb  poisson_pinn_2d_cgd.ipynb  poisson_pinn_2d_cgd_matrixfree.ipynb
examples/non-maintained/: 2dpinns.py  2dpinnsBClinesearch.py  boundaryL2.py  dirichlet.py  heateq.py  jaxtyping_guidlines.py  linesearch.py  pinn.py  poisson_pinn_3d_distance_fct.py
experiments/: alignment.py  alignment_book.ipynb  plotting.ipynb  train_time.py
src/natgrad/: derivatives.py  domains.py  gram.py  inner.py  integrators.py  levenberg_marquardt.py  linalg.py  logger.py  mlp.py  ntk.py  plotting.py  pushforward.py  typemacros.py  types.py  utility.py
tests/: domains_test.py  typetest.py
