[metadata]
name = natgrad
version = 0.0.0
license = MIT
description = A set of functions to compute natural gradients
long_description = README.md
author = Marius Zeinhofer
author_email = mariusz@simula.no

[options]
packages = find:
package_dir =
   =src
include_package_data = True

[options.packages.find]
where=src